# web3-checker-bot

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
admin/: Dockerfile  main.py
admin/api/: auth.py  bot.py  stats.py  users.py
admin/pages/: pages.py
admin/repositories/: admin_repo.py
admin/scripts/: create_admin.py
admin/services/: admin_service.py  auth.py  exception_handler.py  logging_config.py
admin/static/js/: auth.js  script.js
admin/static/styles/: dashboard.css  login.css
admin/templates/: dashboard.html  login.html
bot/: Dockerfile  main.py
bot/handlers/: add_wallets_handler.py  check_wallets_handler.py  choose_projects_handler.py  csv_handler.py  delete_wallets_handler.py  start_handler.py
bot/services/: csv_manager.py  middlewares.py  states.py
handlers/: add_wallets_handler.py  check_wallets_handler.py  choose_projects_handler.py  csv_handler.py  delete_wallets_handler.py  start_handler.py
rabbitmq/: consumer.py  producer.py
shared/: bot_instance.py  bot_repo.py  bot_service.py  consumer.py  exceptions.py  producer.py  schemas.py  session.py  settings.py  vars.py  wallet_checker.py
src/: bot_instance.py  csv_manager.py  db.py  vars.py  wallet_checker.py
tests/: test_admin_service.py  test_bot_repo.py  test_bot_service.py
tests/mocks/: fixtures.py  mock_db.json
