[project]
name = "web3-checker-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "aionotaio",email = "143857085+aionotaio@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "rabbitmq-rpc @ git+https://github.com/deepmancer/rabbitmq-rpc.git",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "aiogram (==3.7.0)",
    "docker (>=7.1.0,<8.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "aiohttp (>=3.9.0,<3.10.0)",
    "pyuseragents (>=1.0.5,<2.0.0)",
    "rfc3339 (>=6.2,<7.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
mongomock-motor = "^0.0.36"
python-dotenv = "^1.1.0"
hypothesis = "^6.135.14"
schemathesis = "^4.0.2"
httpie = "^3.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
